--- a/wp-content/themes/perkfixone/scss/style.scss
+++ b/wp-content/themes/perkfixone/scss/style.scss
@@ -2586,6 +2586,34 @@ body {
           }
         }
       }
+
+      .support-device {
+        display: flex;
+        justify-content: space-around;
+        padding-top: 10px;
+        padding-bottom: 10px;
+        .left {
+          font-family: SFProText-Medium;
+          font-size: 0.6875rem;
+        }
+        .right {
+          font-family: SFProText-Medium;
+          font-size: 0.6875rem;
+        }
+      }
+
+      .helpful-info {
+        .title {
+          padding-top: 25px;
+          font-family: SFProText-Medium;
+          font-size: 0.6875rem;
+        }
+        .content {
+          padding-top: 20px;
+          font-family: SFProText-Medium;
+          font-size: 0.625rem;
+        }
+      }
     }
   }
   .login-page {
