create build mode

--- a/wp-content/themes/perkfixone/scss/style.scss
+++ b/wp-content/themes/perkfixone/scss/style.scss
@@ -286,12 +286,13 @@ body {
     h1 {
       margin: 0;
 
-      font-size: 60px;
+      font-size: 3.125rem;
       padding-top: 20px;
       justify-content: center;
       text-align: center;
+      margin-top: 50px;
       font-family: SFProText-Bold;
-      margin-bottom: 20px;
+      margin-bottom: 33.5px;
     }
     .content-img {
       margin-bottom: 40px;
@@ -1225,7 +1226,7 @@ body {
       .title {
         margin: 0;
         padding-bottom: 40px;
-        font-size: 50px;
+        font-size: 3.125rem;
         padding-top: 20px;
         justify-content: center;
         text-align: center;
@@ -1277,11 +1278,11 @@ body {
   .perkfix-store {
     width: 100%;
     .title {
-      margin-top: 80px;
+      margin-top: 50px;
       padding-left: 15%;
       padding-right: 15%;
-      font-family: SFProText-Heavy;
-      font-size: 50px;
+      font-family: SFProText-Bold;
+      font-size: 3.125rem;
       color: black;
       text-align: center;
     }
@@ -2447,6 +2448,16 @@ body {
 }
 
 @media (max-width: 780px) {
+  .perkfix-home18 {
+    .title {
+      padding: 0px !important;
+      padding-bottom: 20px !important;
+      font-size: 0.9375rem !important;
+    }
+    .movie {
+      width: 100% !important;
+    }
+  }
   .header {
     height: 45px !important;
     width: 100% !important;
