--- a/wp-content/themes/perkfixone/js/jquery.auto-complete.css
+++ b/wp-content/themes/perkfixone/js/jquery.auto-complete.css
@@ -7,3 +7,5 @@
 .autocomplete-suggestion { position: relative; padding: 0 .6em; line-height: 23px; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; font-size: 1.02em; color: #333; }
 .autocomplete-suggestion b { font-weight: normal; color: #1f8dd6; }
 .autocomplete-suggestion.selected { background: #f0f0f0; }
+.autocomplete-suggestion-desc { position: relative; padding: 0 .6em; line-height: 23px; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; font-size: 1.02em; color: #333; }
+.autocomplete-suggestion-desc b { font-weight: bold; }
