--- a/wp-content/themes/perkfixone/scss/style.scss
+++ b/wp-content/themes/perkfixone/scss/style.scss
@@ -65,6 +65,10 @@ body {
   display: flex;
   flex-direction: column;
 
+  .search:hover {
+    cursor: pointer;
+  }
+
   .hidden {
     display: none !important;
   }
