--- a/wp-content/themes/perkfixone/style.css
+++ b/wp-content/themes/perkfixone/style.css
@@ -66,7 +66,7 @@ body {
 body #wellness, body #fitness, body #commuter, body #training, body #lifestyle {
   cursor: pointer;
 }
-body .search:hover {
+body .search:hover, body .close:hover {
   cursor: pointer;
 }
 body .hidden {
