--- a/wp-content/themes/perkfixone/style.css
+++ b/wp-content/themes/perkfixone/style.css
@@ -1658,10 +1658,12 @@ body .perkfix-container .perkfix-content-category .categories .category-list .ca
 body .perkfix-container .perkfix-content-category .categories .category-list .category-item .right-item img {
   width: 12px;
   height: 20px;
-  opacity: 0%;
+  opacity: 0;
+  filter: alpha(opacity=0);
 }
 body .perkfix-container .perkfix-content-category .categories .category-list .category-item .selected img {
-  opacity: 100%;
+  opacity: 1;
+  filter: alpha(opacity=100);
 }
 body .perkfix-container .perkfix-content-category .categories .category-list .category-item:hover {
   color: #c8c8c8;
