--- a/wp-content/themes/perkfixone/scss/style.scss
+++ b/wp-content/themes/perkfixone/scss/style.scss
@@ -2224,11 +2224,82 @@ body {
         }
       }
       .item-search-content-container {
-        width: 100%;
-        min-width: 500px;
-        //height: calc(-70px + 100%);
-        border-style: solid;
         overflow-y: scroll;
+        overflow-x: scroll;
+        padding-top: 10px;
+        .item-detail {
+          display: flex;
+          justify-content: start;
+          width: 100%;
+          .item-detail-image {
+            img {
+              width: 90px;
+            }
+            padding: 10px;
+            margin-right: 10px;
+          }
+          .item-detail-text {
+            width: 350px;
+            display: flex;
+            justify-content: space-between;
+            padding: 10px;
+            .pf-item-text {
+              .item-title {
+                font-family: SFProText-Medium;
+                font-size: 0.875rem;
+                padding: 4px;
+              }
+              .item-desc {
+                font-family: SFProText-Light;
+                font-size: 0.8125rem;
+                padding: 4px;
+              }
+              .item-provide {
+                font-family: SFProText-Light;
+                font-size: 0.8125rem;
+                padding: 4px;
+                a {
+                  color: rgba(0, 106, 255, 1);
+                  text-decoration: none;
+                }
+              }
+            }
+            .pf-item-button {
+              display: flex;
+              flex-direction: column;
+              justify-content: space-evenly;
+              font-family: SFProText-Semibold;
+              font-size: 0.8125rem;
+              .btn-pink {
+                color: white;
+                background-color: rgba(255, 51, 141, 1);
+              }
+              .btn-pink:hover {
+                color: white;
+                background-color: rgba(255, 23, 84, 1);
+                cursor: pointer;
+              }
+              .btn-rd {
+                border-style: none;
+                border-radius: 15px;
+                padding: 8px 10px;
+                outline: none;
+              }
+              .item-price {
+                font-family: SFProText-Light;
+                font-size: 0.8125rem;
+                text-align: center;
+              }
+            }
+          }
+        }
+        .item-cos-image {
+          padding: 10px;
+          width: 300px;
+          img {
+            width: 100%;
+          }
+        }
       }
     }
   }
