--- a/wp-content/themes/perkfixone/style.css
+++ b/wp-content/themes/perkfixone/style.css
@@ -2476,6 +2476,7 @@ body .footer-menu .menu-description .terms a {
   }
   .perkfix-home18 .movie {
     width: 100% !important;
+    height: auto !important;
   }
 
   .header {
