--- a/wp-content/themes/perkfixone/scss/style.scss
+++ b/wp-content/themes/perkfixone/scss/style.scss
@@ -2619,6 +2619,7 @@ body {
     .movie {
       width: 100% !important;
       height: auto !important;
+      object-fit: cover;
     }
   }
   .header {
