--- a/wp-content/themes/perkfixone/style.css
+++ b/wp-content/themes/perkfixone/style.css
@@ -2477,6 +2477,7 @@ body .footer-menu .menu-description .terms a {
   .perkfix-home18 .movie {
     width: 100% !important;
     height: auto !important;
+    object-fit: cover;
   }
 
   .header {
