--- a/wp-content/themes/perkfixone/scss/style.scss
+++ b/wp-content/themes/perkfixone/scss/style.scss
@@ -2611,14 +2611,19 @@ body {
 
 @media (max-width: 780px) {
   .perkfix-home18 {
-    .title {
-      padding: 0px !important;
-      padding-bottom: 20px !important;
-      font-size: 0.9375rem !important;
-    }
-    .movie-container {
-      img {
-        width: 100% !important;
+    width: 100%;
+    .content {
+      width: 100%;
+      .title {
+        padding: 0px !important;
+        padding-bottom: 20px !important;
+        font-size: 0.9375rem !important;
+      }
+      .movie-container {
+        img {
+          width: 100% !important;
+          height: auto !important;
+        }
       }
     }
   }
