--- a/wp-content/themes/perkfixone/style.css
+++ b/wp-content/themes/perkfixone/style.css
@@ -2469,13 +2469,20 @@ body .footer-menu .menu-description .terms a {
   }
 }
 @media (max-width: 780px) {
-  .perkfix-home18 .title {
+  .perkfix-home18 {
+    width: 100%;
+  }
+  .perkfix-home18 .content {
+    width: 100%;
+  }
+  .perkfix-home18 .content .title {
     padding: 0px !important;
     padding-bottom: 20px !important;
     font-size: 0.9375rem !important;
   }
-  .perkfix-home18 .movie-container img {
+  .perkfix-home18 .content .movie-container img {
     width: 100% !important;
+    height: auto !important;
   }
 
   .header {
