--- a/wp-content/themes/perkfixone/scss/style.scss
+++ b/wp-content/themes/perkfixone/scss/style.scss
@@ -2621,7 +2621,7 @@ body {
       }
       .movie-container {
         img {
-          margin: auto;
+          margin: 0;
           width: 100% !important;
           height: auto !important;
         }
