--- a/wp-content/themes/perkfixone/style.css
+++ b/wp-content/themes/perkfixone/style.css
@@ -2481,7 +2481,7 @@ body .footer-menu .menu-description .terms a {
     font-size: 0.9375rem !important;
   }
   .perkfix-home18 .content .movie-container img {
-    margin: auto;
+    margin: 0;
     width: 100% !important;
     height: auto !important;
   }
