--- a/wp-content/themes/perkfixone/scss/style.scss
+++ b/wp-content/themes/perkfixone/scss/style.scss
@@ -2622,7 +2622,8 @@ body {
       .movie-container {
         img {
           margin: 0;
-          //width: 100% !important;
+          width: 100% !important;
+          max-width: 100% !important;
         }
       }
     }
