--- a/wp-content/themes/perkfixone/style.css
+++ b/wp-content/themes/perkfixone/style.css
@@ -2482,6 +2482,8 @@ body .footer-menu .menu-description .terms a {
   }
   .perkfix-home18 .content .movie-container img {
     margin: 0;
+    width: 100% !important;
+    max-width: 100% !important;
   }
 
   .header {
