--- a/wp-content/themes/perkfixone/scss/style.scss
+++ b/wp-content/themes/perkfixone/scss/style.scss
@@ -2623,7 +2623,7 @@ body {
         img {
           margin: 0;
           width: 100% !important;
-          display: flex !important;
+          height: 100% !important;
         }
       }
     }
