--- a/wp-content/themes/perkfixone/scss/style.scss
+++ b/wp-content/themes/perkfixone/scss/style.scss
@@ -409,12 +409,49 @@ body {
     }
   }
 
+  // .perkfix-home3 {
+  //   width: 100%;
+  //   .header-home2 {
+  //     background-color: #eff0f1;
+  //     display: flex;
+  //     padding: 40px;
+  //     justify-content: space-evenly;
+  //     align-items: center;
+  //     h1 {
+  //       margin: 0;
+  //       padding: 0;
+  //       font-size: 60px;
+  //       font-family: SFProText-Heavy;
+  //     }
+  //   }
+  //   .content4 {
+  //     .txt-fitness {
+  //       position: absolute;
+  //       margin-left: 180px;
+  //       margin-top: 50px;
+  //       font-family: SFProText-Medium;
+  //       font-size: 25px;
+  //       color: white;
+  //     }
+  //     .fitness {
+  //       width: 100%;
+  //       height: 100%;
+  //     }
+  //   }
+  // }
+
   .perkfix-home3 {
+    background-color: rgba(0, 0, 0, 1);
     width: 100%;
+    padding-bottom: 149px;
     .header-home2 {
-      background-color: #eff0f1;
+      padding-top: 20px;
+      padding-left: 204px;
+      padding-bottom: 30px;
+      height: 182px;
+      width: 511px;
+      color:white;
       display: flex;
-      padding: 40px;
       justify-content: space-evenly;
       align-items: center;
       h1 {
@@ -425,10 +462,10 @@ body {
       }
     }
     .content4 {
+      padding-left: 204px;
       .txt-fitness {
         position: absolute;
-        margin-left: 180px;
-        margin-top: 50px;
+        margin-top: 540px;
         font-family: SFProText-Medium;
         font-size: 25px;
         color: white;
@@ -439,6 +476,118 @@ body {
       }
     }
   }
+
+  // .perkfix-home4 {
+  //   width: 100%;
+  //   .header-home3 {
+  //     height: 106px;
+  //     display: flex;
+  //     justify-content: space-evenly;
+  //     align-items: center;
+  //     p {
+  //       padding: 0;
+  //       margin: 0;
+  //       font-size: 40px;
+  //       font-family: SFProText-Light;
+  //       .bold-title {
+  //         font-size: 40px;
+  //         font-family: SFProText-Bold;
+  //       }
+  //     }
+  //   }
+  //   .content-icon {
+  //     display: flex;
+  //     flex-direction: row;
+  //     margin-bottom: 20px;
+  //     margin-left: 20px;
+  //     margin-right: 20px;
+  //     .icon-blank {
+  //       width: 30%;
+  //     }
+  //     .icon-sect {
+  //       width: 40%;
+  //       display: flex;
+  //       justify-content: space-evenly;
+  //       font-family: SFProText-Regular;
+  //       font-size: 15px;
+  //       .pelaton {
+  //         width: 118px;
+  //         text-align: center;
+
+  //         img {
+  //           width: 90px;
+  //         }
+  //       }
+  //       .classpass {
+  //         width: 118px;
+  //         text-align: center;
+  //         img {
+  //           width: 90px;
+  //         }
+  //       }
+  //       .aaptiv {
+  //         width: 118px;
+  //         text-align: center;
+  //         img {
+  //           width: 90px;
+  //         }
+  //       }
+  //     }
+  //     .icon-desc {
+  //       width: 30%;
+  //       h1 {
+  //         padding: 0;
+  //         margin: 0;
+  //         font-size: 50px;
+  //         font-family: SFProText-Heavy;
+  //       }
+  //       p {
+  //         font-size: 18px;
+  //         font-family: SFProText-Medium;
+  //       }
+  //     }
+  //   }
+  //   .content-link {
+  //     padding-top: 15px;
+  //     padding-bottom: 15px;
+  //     display: flex;
+  //     margin-bottom: 20px;
+  //     justify-content: center;
+  //     a {
+  //       padding-left: 20px;
+  //       padding-right: 20px;
+  //       color: #0091ff;
+  //       text-decoration: none;
+  //       font-size: 15px;
+  //       font-family: SFProText-Medium;
+  //     }
+  //   }
+  //   .content-img {
+  //     margin-bottom: 100px;
+
+  //     .title {
+  //       width: 100%;
+  //       position: absolute;
+  //       margin-top: 38px;
+  //       text-align: center;
+  //       color: white;
+  //       font-family: SFProText-Heavy;
+  //       font-size: 60px;
+  //     }
+  //     .content {
+  //       position: absolute;
+  //       margin-top: 396px;
+  //       margin-left: 147px;
+  //       color: white;
+  //       font-family: SFProText-Medium;
+  //       font-size: 25px;
+  //     }
+  //     img {
+  //       width: 100%;
+  //       height: 100%;
+  //     }
+  //   }
+  // }
 
   .perkfix-home4 {
     width: 100%;
@@ -529,18 +678,50 @@ body {
       margin-bottom: 100px;
 
       .title {
-        width: 100%;
         position: absolute;
-        margin-top: 38px;
-        text-align: center;
-        color: white;
+        margin-left: 50%;
+        margin-top: 30px;
+        text-align: left;
+        // color: white;
+        background: linear-gradient(to right, red , blue);
+        -webkit-background-clip: text;
+        background-clip: text;
+        -webkit-text-fill-color:transparent;
         font-family: SFProText-Heavy;
-        font-size: 60px;
+        font-size: 45px;
       }
+      .sub-icons {
+        width: 120px;
+        text-align: center;
+        padding-top:15px;
+        padding-left: 20px;
+        padding-right: 20px;
+        background: white;
+        border-radius: 10px;
+        position: absolute;
+        margin-left: 18%;
+        margin-top: 20%;
+        .image1 {
+          width:50px;
+          margin-bottom: 20px;
+        }
+        .image2 {
+          width: 80px;
+        }
+        .image3 {
+          width: 60px;
+        }
+        .title-image3 {
+          font-family: SFProText-Medium;
+          margin-top: 5px;
+          margin-bottom: 10px;
+        }
+      }
+
       .content {
         position: absolute;
-        margin-top: 396px;
-        margin-left: 147px;
+        margin-left: 250px;
+        margin-top: 630px;
         color: white;
         font-family: SFProText-Medium;
         font-size: 25px;
@@ -2491,11 +2672,23 @@ body {
     display: block !important;
   }
 
+  .perkfix-home3 {
+    .header-home2 {
+      // padding-left: 0px !important;
+    }
+    .content4 {
+      // padding-left: 0px !important;
+      .txt-fitness {
+        margin-top: 450px !important;
+      }
+    }
+  }
+
   .perkfix-home4 {
     .content-img {
       .content {
-        margin-left: 100px !important;
-        margin-top: 330px !important;
+        margin-left: 250px !important;
+        margin-top: 550px !important;
       }
     }
   }
@@ -2565,11 +2758,24 @@ body {
   .perkfix-home2 {
     display: block !important;
   }
+
+  .perkfix-home3 {
+    .header-home2 {
+      // padding-left: 0px !important;
+    }
+    .content4 {
+      // padding-left: 0px !important;
+      .txt-fitness {
+        margin-top: 340px !important;
+      }
+    }
+  }
+  
   .perkfix-home4 {
     .content-img {
       .content {
-        margin-left: 80px !important;
-        margin-top: 300px !important;
+        margin-left: 250px !important;
+        margin-top: 430px !important;
       }
     }
   }
