--- a/wp-content/themes/perkfixone/style.css
+++ b/wp-content/themes/perkfixone/style.css
@@ -389,7 +389,7 @@ body .perkfix-home3 {
 }
 body .perkfix-home3 .header-home2 {
   padding-top: 20px;
-  padding-left: 204px;
+  padding-left: 13%;
   padding-bottom: 30px;
   height: 182px;
   width: 511px;
@@ -405,18 +405,20 @@ body .perkfix-home3 .header-home2 h1 {
   font-family: SFProText-Heavy;
 }
 body .perkfix-home3 .content4 {
-  padding-left: 204px;
+  text-align: center;
 }
 body .perkfix-home3 .content4 .txt-fitness {
+  text-align: left;
   position: absolute;
   margin-top: 540px;
+  margin-left: 13%;
   font-family: SFProText-Medium;
   font-size: 25px;
   color: white;
 }
-body .perkfix-home3 .content4 .fitness {
-  width: 100%;
-  height: 100%;
+body .perkfix-home3 .content4 img {
+  text-align: center;
+  width: 74%;
 }
 body .perkfix-home4 {
   width: 100%;
